@@ -373,6 +373,9 @@ Library
 - Issue #15487: Add a __sizeof__ implementation for buffered I/O objects.
   Patch by Serhiy Storchaka.
 
+- Issue #15514: Correct __sizeof__ support for cpu_set.
+  Patch by Serhiy Storchaka.
+
 - Issue #15187: Bugfix: remove temporary directories test_shutil was leaving
   behind.
 
